# tbjcATTPCroot2

./: CMakeLists.txt  README.md  main.cxx  mult.py
ATAnalysisTask/: ATAnalysis.cc  ATAnalysis.hh  ATAnalysisTask.cc  ATAnalysisTask.hh  ATProtoAnalysis.cc  ATProtoAnalysis.hh  CMakeLists.txt  L
ATDecoder/: ATCore2.cc  ATCore2.hh  ATEvent.cc  ATEvent.hh  ATHit.cc  ATHit.hh  ATPad.cc  ATPad.hh  ATPedestal.cc  ATPedestal.hh  ATProtoEvent.cc  ATProtoEvent.hh  ATProtoQuadrant.cc  ATProtoQuadrant.hh  ATRawEvent.cc  ATRawEvent.hh  CMakeLists.txt
ATDecoder/AtMap/: AtTpcMap.cxx  AtTpcMap.h  AtTpcProtoMap.cxx  AtTpcProtoMap.h  CMakeLists.txt
ATDecoder/GETDecoder2/: CMakeLists.txt  GETBasicFrame.cc  GETBasicFrame.hh  GETBasicFrameHeader.cc  GETBasicFrameHeader.hh  GETCoboFrame.hh  GETDecoder2.cc  GETDecoder2.hh  GETFileChecker.hh  GETFrameInfo.cc  GETFrameInfo.hh  GETHeaderBase.cc  GETHeaderBase.hh  GETLayerHeader.cc  GETLayerHeader.hh  GETLayeredFrame.cc  GETLayeredFrame.hh  GETMath2.cc  GETMath2.hh  GETTopologyFrame.cc  GETTopologyFrame.hh
ATDecoder2Task/: ATDecoder2Task.cc  ATDecoder2Task.hh  CMakeLists.txt  tbjcDecoder.h
ATDigiPar/: ATDigiPar.cc  ATDigiPar.hh  ATGas.cc  ATGas.hh  CMakeLists.txt
ATHoughTask/: ATHoughSpace.cc  ATHoughSpace.hh  ATHoughSpaceCircle.cc  ATHoughSpaceCircle.hh  ATHoughSpaceLine.cc  ATHoughSpaceLine.hh  ATHoughTask.cc  ATHoughTask.hh  ATMCMinimization.cc  ATMCMinimization.hh  ATMinimization.cc  ATMinimization.hh  CMakeLists.txt
ATPSATask/: 2  ATPSA.cc  ATPSA.hh  ATPSAProto.cc  ATPSAProto.hh  ATPSASimple.cc  ATPSASimple.hh  ATPSASimple2.cc  ATPSASimple2.hh  ATPSATask.cc  ATPSATask.hh  CMakeLists.txt  tbjcPSA.h
ATPhiRecoTask/: ATPhiReco.cc  ATPhiReco.hh  ATPhiRecoSimple.cc  ATPhiRecoSimple.hh  ATPhiRecoTask.cc  ATPhiRecoTask.hh  ATPhiRecoTriple.cc  ATPhiRecoTriple.hh  CMakeLists.txt
FairRoot/: CMakeLists.txt  FairLogger.cxx  FairLogger.h  FairParSet.h  FairRootManager.cxx  FairRootManager.h  FairRun.cxx  FairRun.h  FairRunAna.cxx  FairRunAna.h  FairRuntimeDb.cxx  FairRuntimeDb.h  FairTask.cxx  FairTask.h
tbjcAnalysis/: .HoughTranform-MP.py.swp  .__afs4291  124Sn Traces.ipynb  72_8.csv  72_8.ods  72_8_t0.csv  85_8.ipynb  85_t0.csv  Backgroun_subtraction.ipynb  Backgroun_subtraction_more.ipynb  EDA.ipynb  FPN.ipynb  GoodOrNot.ipynb  Hough Transform.ipynb  Hough Transform1.ipynb  HoughTranform-MP.ipynb  HoughTranform-MP2.py  ImageProcessing1.ipynb  ImageProcessing2.ipynb  ImageProcessing3.ipynb  ImageProcessing4.ipynb  LeadingEdge-b.ipynb  LeadingEdge-c.ipynb  LeadingEdge-scattering_75_lotsData-Copy1.ipynb  LeadingEdge-scattering_75_lotsData.ipynb  LeadingEdge.ipynb  LeadingEdge_72_8.ipynb  ML-Robot-DataGenerator.ipynb  ML-Robot-GPU.py  ML-Robot-test-GPU.py  ML-Robot-test-ModelBuild-Copy1.ipynb  ML-Robot-test-ModelBuild.ipynb  ML-Robot-test.ipynb  ML-Robot.ipynb  ML_robot.ipynb  MultipleSQL.ipynb  PID.ipynb  PIDn.ipynb  PhiAngles.ipynb  Position.csv  (+14 more)
tbjcAnalysis/.ipynb_checkpoints/: 85_8-checkpoint.ipynb  Backgroun_subtraction-checkpoint.ipynb  BaseLineSubtraction-checkpoint.ipynb  CNN-test2-checkpoint.ipynb  EDA-checkpoint.ipynb  Hough Transform-checkpoint.ipynb  HoughTranform-MP-checkpoint.ipynb  HoughTranform-MP2-checkpoint.ipynb  ImageProcessing-final-checkpoint.ipynb  ImageProcessing1-checkpoint.ipynb  LeadingEdge-b-checkpoint.ipynb  LeadingEdge-scattering-Copy1-checkpoint.ipynb  LeadingEdge-scattering-checkpoint.ipynb  LeadingEdge_72_8-checkpoint.ipynb  ML-Robot-DataGenerator-checkpoint.ipynb  ML-Robot-checkpoint.ipynb  ML-Robot-test-ModelBuild-checkpoint.ipynb  ML-Robot-test-checkpoint.ipynb  MultipleSQL-checkpoint.ipynb  PIDn-checkpoint.ipynb  PhiAngles-checkpoint.ipynb  Untitled2-checkpoint.ipynb  Visualizer-checkpoint.ipynb  modified_PSA-checkpoint.ipynb  pulser-test-checkpoint.ipynb  statistics-checkpoint.ipynb  tf-test-checkpoint.ipynb
tbjcAnalysis/EachQ/: Untitled.ipynb  Untitled1.ipynb  Untitled10.ipynb  Untitled13.ipynb  Untitled2.ipynb  Untitled3.ipynb  Untitled4.ipynb  Untitled5.ipynb  Untitled6.ipynb  Untitled7.ipynb  Untitled9.ipynb  debugging.ipynb  func.py  func1.py  func2.py
tbjcAnalysis/EachQ/.ipynb_checkpoints/: Untitled10-checkpoint.ipynb  Untitled11-checkpoint.ipynb  Untitled13-checkpoint.ipynb  Untitled6-checkpoint.ipynb  debugging-checkpoint.ipynb
tbjcAnalysis/GPU/: CNN-test.ipynb  CNN-test2-Copy3.ipynb  cnn-batch.py  cnn-batch1.py  cnn-batch2.py  cnn-batch3.py
tbjcAnalysis/GPU/.ipynb_checkpoints/: CNN-test-checkpoint.ipynb  CNN-test2-Copy3-checkpoint.ipynb
tbjcAnalysis/MultiLine/: Untitled.ipynb  Untitled1.ipynb  Untitled3.ipynb  Untitled5-Copy1.ipynb  Untitled5.ipynb  Untitled6.ipynb  Untitled7.ipynb  Untitled8.ipynb  func.py
tbjcAnalysis/MultiLine/.ipynb_checkpoints/: Untitled-checkpoint.ipynb  Untitled4-checkpoint.ipynb  Untitled5-Copy1-checkpoint.ipynb  Untitled5-checkpoint.ipynb
tbjcAnalysis/OpenCV/: Untitled.ipynb
tbjcAnalysis/OpenCV/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
tbjcClonesArray/: tbjcArray.h  tbjcClonesArray.h
tbjcConvertor/: Convertor.ipynb  Convertor1.py  Convertor_lite.py  Convertor_sqlite.py  Tin-Convertor.ipynb  Tin-Convertor.py  Untitled.ipynb  XML-Convertor.ipynb  model.py
tbjcConvertor/.ipynb_checkpoints/: Convertor-checkpoint.ipynb  Tin-Convertor-checkpoint.ipynb
tbjcVisualizer/: Converter.py  Convertor.ipynb  Convertor.py  Convertor_sqlite.ipynb  Convertor_sqlite.py  TreeCreator.cxx  TreeReader.cxx  Visualizer.ipynb  Visualizer_old.ipynb  peakdetect.py  write.cxx
tbjcVisualizer/.ipynb_checkpoints/: Visualizer-checkpoint.ipynb
test/: Visualizer.ipynb  mathcoreLV.root  read.cxx
test/.ipynb_checkpoints/: Visualizer-checkpoint.ipynb
